tests/baselines/reference/assignmentCompatBug3.errors.txt
tests/cases/compiler/assignmentCompatBug3.ts(3,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/assignmentCompatBug3.ts(4,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/assignmentCompatBug3.ts(14,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/assignmentCompatBug3.ts (3 errors) ====
    function makePoint(x: number, y: number) {
        return {
            get x() { return x;}, // shouldn't be "void"
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            get y() { return y;}, // shouldn't be "void"
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            //x: "yo",
            //y: "boo",
            dist: function () {
    			return Math.sqrt(x*x+y*y); // shouldn't be picking up "x" and "y" from the object lit
    		}
    	}
    }
    
    class C {
        get x() {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 0;
        }
    }
    
    function foo(test: string) { }
    
    var x: any;
    var y: any;
    
    foo(x);
    foo(x + y);